src/test/ui/existential_types/different_defining_uses.stderr
error: defining existential type use differs from previous
  --> $DIR/different_defining_uses.rs:23:1
   |
LL | / fn bar() -> Foo { //~ ERROR defining existential type use differs from previous
LL | |     42i32
LL | | }
   | |_^
   |
note: previous use here
  --> $DIR/different_defining_uses.rs:19:1
   |
LL | / fn foo() -> Foo {
LL | |     ""
LL | | }
   | |_^

error: aborting due to previous error

